--- a/.github/workflows/buildimage.yml
+++ b/.github/workflows/buildimage.yml
@@ -41,7 +41,7 @@ jobs:
 
           sed -i 's/CheckSpace/#CheckSpace/g' /etc/pacman.conf
           sed -i 's/#en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/g' /etc/locale.gen
-          sed -i 's/#en_GB.UTF-8 UTF-8/en_GB.UTF-8 UTF-8/g' /etc/locale.gen
+          sed -i 's/#de_DE.UTF-8 UTF-8/de_DE.UTF-8 UTF-8/g' /etc/locale.gen
           locale-gen
 
           echo "LANG=de_DE.UTF-8" >> /etc/locale.conf
