--- a/.github/workflows/buildimage.yml
+++ b/.github/workflows/buildimage.yml
@@ -91,6 +91,8 @@ jobs:
           cd ..
           exit
 
+          sleep 120
+
           sudo tar -cpJf psxitarch.tar.xz --exclude /psxitarch.tar.xz --one-file-system /
           EOT
 
